--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section class="games-grid">
             <!-- Game 1 -->
             <div class="game">
-                <div class="game-title">Game 1</div>
+                <div class="game-title">2048</div>
                 <img src="https://via.placeholder.com/150" alt="Game 1">
                 <button class="play-btn">Play Now</button>
             </div>
