--- a/index.html
+++ b/index.html
@@ -1,63 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Games Platform</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no" />
+    <link rel="stylesheet" href="assets/css/app.css" type="text/css" />
+    <title>Basketball Legends Unblocked</title>
+
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
+
 <body>
-    <header>
-        <h1>Online Games</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="popular.html">Popular</a></li>
-                <li><a href="about.html">About</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="games-grid">
-            <!-- Game 1 -->
-            <div class="game">
-                <div class="game-title">2048</div>
-                <img src="https://via.placeholder.com/150" alt="Game 1">
-                <button class="play-btn">Play Now</button>
-            </div>
-            <!-- Game 2 -->
-            <div class="game">
-                <div class="game-title">Game 2</div>
-                <img src="https://via.placeholder.com/150" alt="Game 2">
-                <button class="play-btn">Play Now</button>
-            </div>
-            <!-- Game 3 -->
-            <div class="game">
-                <div class="game-title">Game 3</div>
-                <img src="https://via.placeholder.com/150" alt="Game 3">
-                <button class="play-btn">Play Now</button>
-            </div>
-            <!-- Game 4 -->
-            <div class="game">
-                <div class="game-title">Game 4</div>
-                <img src="https://via.placeholder.com/150" alt="Game 4">
-                <button class="play-btn">Play Now</button>
-            </div>
-            <div class="game">
-                <div class="game-title">Game 4</div>
-                <img src="https://via.placeholder.com/150" alt="Game 4">
-                <button class="play-btn">Play Now</button>
-            </div>
-            <div class="game">
-                <div class="game-title">Game 4</div>
-                <img src="https://via.placeholder.com/150" alt="Game 4">
-                <button class="play-btn">Play Now</button>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 Online Games Platform</p>
-    </footer>
-    <script src="script.js"></script>
+    <script>
+        window.location="https://ubg98.github.io/BasketballLegends2020/";
+    </script>
+    <div id="content"></div>
+    <div id="orientation"></div>
+    <div id="loader">Loading ...</div>
+    <script type="text/javascript" src="assets/lib/nape.min.js">
+        var nape = "nape.min.js";
+    </script>
+    <script type="text/javascript" src="assets/lib/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="assets/lib/easeljs-0.8.2.combined.js"></script>
+    <script type="text/javascript" src="assets/lib/bluebird.min.js"></script>
+    <script type="text/javascript" src="assets/lib/phaser.min.js"></script>
+    <script type="text/javascript" src="assets/lib/phaser-cachebuster.min.js"></script>
+    <script type="text/javascript" src="assets/lib/phaser-super-storage.min.js"></script>
+    <script type="text/javascript" src="assets/lib/dragonBones.min.js"></script>
+
+    <script type="text/javascript">
+        var useEvents = (typeof(Event) === 'function');
+
+        var myDispatchEvent = function (name){
+            var event;
+            if (useEvents){
+                event =  new Event(name);
+            }else{
+                event = document.createEvent('Event');
+                event.initEvent(name, true, true);
+            }
+            document.getElementById("content").dispatchEvent(event);
+        }
+
+        window["GD_OPTIONS"] = {
+            "gameId": "3dbd133d0cd9468bafdf2c9812290f4b",
+            "onEvent": function(event) {
+                switch (event.name) {
+                    case "SDK_GAME_START":
+                        // advertisement done, resume game logic and unmute audio
+                        myDispatchEvent('SDK_GAME_START');
+                        break;
+                    case "SDK_GAME_PAUSE":
+                        // pause game logic / mute audio
+                        myDispatchEvent('SDK_GAME_PAUSE');
+                        // document.getElementById("content").dispatchEvent(new Event("SDK_GAME_PAUSE"));
+                        break;
+                    case "SDK_GDPR_TRACKING":
+                        // this event is triggered when your user doesn't want to be tracked
+                        console.log("SDK_GDPR_TRACKING");
+                        break;
+                    case "SDK_GDPR_TARGETING":
+                        // this event is triggered when your user doesn't want personalised targeting of ads and such
+                        console.log("SDK_GDPR_TARGETING");
+                        break;
+                    case "SDK_READY":
+                        // this event is triggered when your user doesn't want personalised targeting of ads and such
+                        console.log("SDK_READY");
+                        break;
+                }
+            },
+        };
+        (function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s);
+            js.id = id;
+            js.src = 'js/main.min.js';
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'gamedistribution-jssdk'));
+</script>
+
+<script type="text/javascript" src="basketball_legends_2020.min.js?22cd1e78f00425837fa0"></script>
+<script src="js/analytics_ubg_v1_4.js"></script>
+<script src="js/ubg235_client_v1_1.js"></script>
 </body>
 </html>
